--- a/index.html
+++ b/index.html
@@ -3,27 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Svetislav's Personal Site</title>
+    <link rel="stylesheet" href="css/styles.css">
+
+  
 </head>
+
 <body>
-    <table>
+    <table cellspacing="20">
         <tr>
-            <td><img src="Ceti profil kép(400x400).jpg" alt="Svetislav's profile picture" width="200" height="200"></td>
+            <td><img src="images/Ceti profil kép.jpg" alt="Svetislav's profile picture" width="200" height="200"></td>
             <td><h1>Kondic Svetislav</h1>
-                <p><em>Építőipari szakmai irányítő, <strong>felügyelő</strong></em></p>
-                <ul>
-                    <li><a href="mailto:svetislav.kondic@gmail.com">Email</a></li>
-                    <li><a href="tel:+36307408950">Mobil</a></li>
-                </ul>
-                <a href="contact-me.html">Elérhetőségeim</a>
-                <p>A munkakört betötltő fő feladatai, hatásköre:</p>
-                <ul style="list-style-type:circle">
-                    <li>10-20 fő munkájának helyszíni vezetése, irányítása</li>
-                    <li>Alvállalkozoi munkák koordinálása</li>
-                    <li>Napi szintű kapcsolattartás alvállalkozókkal</li>
-                    <li>Anyagok, eszközök, emberi erőforrások koordinálása</li>
-                    <li>Munkabiztonsági előírások betartása és betartattatása</li>
-                    <li>Kapcsolódó adminisztrációs feladatok ellátása</li>
-                </ul></td>
+                <p><em>Építőipari szakmai irányítő, felügyelő</em></p>
+                <a href="http://moraepkft.hu/">Móraép Kft</a>
+                <p>Mórahalom</p>               
+                <a href="contact-me.html">Elérhetőségeim</a></td>
+                
         </tr>
     </table>
     
@@ -35,7 +29,7 @@
         <li>Munkaidő, munkarend: Heti 40 óra</li>
     </ol>
     <hr>
-    <h3>Tapasztalat</h3>
+    <h3>Szakmai tapasztalat</h3>
     <table cellspacing="10">
         <thead>
             <tr>
@@ -46,11 +40,15 @@
         <tbody>
             <tr>
                 <td>2021-2022</td>
-                <td>Compas Project</td>
+                <td>Camphill Wellbeing Trust, Aberdeen, Bieldside, Egyesült Királyság, kültéri területek koordinátora/kertész </td>
             </tr>
             <tr>
-                <td>2021</td>
-                <td>Online képzés</td>
+                <td>2020-2021</td>
+                <td>Greaves Gardening, Aberdeen, Egyesült Királyság, kertész</td>
+            </tr>
+            <tr>
+                <td>2005-2020</td>
+                <td>Wiener Stӓdtische biztosító Belgrád (Vienna Insurance Group), Szerbia, biztosítási tanácsadó - részlegvezető helyettes</td>
             </tr>
         </tbody>
     </table>
@@ -71,7 +69,20 @@
         </tr>
 
     </table>
-
+    <hr>
+    <ul>
+        <li><a href="mailto:svetislav.kondic@gmail.com">Email</a></li>
+        <li><a href="tel:+36307408950">Mobil</a></li>
+    </ul>
+    <p>A munkakört betötltő fő feladatai, hatásköre:</p>
+                <ul style="list-style-type:circle">
+                    <li>10-20 fő munkájának helyszíni vezetése, irányítása</li>
+                    <li>Alvállalkozoi munkák koordinálása</li>
+                    <li>Napi szintű kapcsolattartás alvállalkozókkal</li>
+                    <li>Anyagok, eszközök, emberi erőforrások koordinálása</li>
+                    <li>Munkabiztonsági előírások betartása és betartattatása</li>
+                    <li>Kapcsolódó adminisztrációs feladatok ellátása</li>
+                </ul></td>
 
 </body>
 </html>
